// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Render 1`] = `
<div
  className="profile-menu"
>
  <div
    className="profile-menu-items"
  >
    <span
      className="d-flex d-lg-none selected-item profile-menu-item"
    />
    <div
      className="d-none d-lg-flex align-items-center"
    >
      <a
        className="profile-menu-item"
        href="/@username/blog"
        onClick={[Function]}
      >
        Blog
      </a>
      <a
        className="profile-menu-item selected-item"
        href="/@username/posts"
        onClick={[Function]}
      >
        Posts
      </a>
      <a
        className="profile-menu-item"
        href="/@username/comments"
        onClick={[Function]}
      >
        Comments
      </a>
      <a
        className="profile-menu-item"
        href="/@username/replies"
        onClick={[Function]}
      >
        Replies
      </a>
    </div>
    <a
      className="profile-menu-item"
      href="/@username/communities"
      onClick={[Function]}
    >
      Communities
    </a>
    <a
      className="profile-menu-item"
      href="/@username/wallet"
      onClick={[Function]}
    >
      Wallet
    </a>
  </div>
  <div
    className="page-tools"
  >
    <div
      className="viewLayouts"
    />
  </div>
</div>
`;

exports[`(2) With active user 1`] = `
<div
  className="profile-menu"
>
  <div
    className="profile-menu-items"
  >
    <span
      className="d-flex d-lg-none selected-item profile-menu-item"
    />
    <div
      className="d-none d-lg-flex align-items-center"
    >
      <a
        className="profile-menu-item"
        href="/@username/blog"
        onClick={[Function]}
      >
        Blog
      </a>
      <a
        className="profile-menu-item selected-item"
        href="/@username/posts"
        onClick={[Function]}
      >
        Posts
      </a>
      <a
        className="profile-menu-item"
        href="/@username/comments"
        onClick={[Function]}
      >
        Comments
      </a>
      <a
        className="profile-menu-item"
        href="/@username/replies"
        onClick={[Function]}
      >
        Replies
      </a>
    </div>
    <a
      className="profile-menu-item"
      href="/@username/communities"
      onClick={[Function]}
    >
      Communities
    </a>
    <a
      className="profile-menu-item"
      href="/@username/wallet"
      onClick={[Function]}
    >
      Wallet
    </a>
    <a
      className="profile-menu-item"
      href="/@username/settings"
      onClick={[Function]}
    >
      Settings
    </a>
  </div>
  <div
    className="page-tools"
  >
    <div
      className="viewLayouts"
    />
  </div>
</div>
`;
